--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>thymeleaf入门</title>
+    <title>首页</title>
 </head>
 <body>
     <h1>ILME</h1>
